--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorSecondaryVariant"
     android:focusableInTouchMode="true"
     tools:context=".ui.UserDetails">
 
@@ -18,188 +19,213 @@
             app:layout_constraintTop_toTopOf="parent"
             android:orientation="vertical">
 
-        <RelativeLayout
-            android:id="@+id/relativeLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="250dp">
+            <RelativeLayout
+                android:id="@+id/relativeLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="250dp">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:layout_alignParentTop="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/box" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_alignParentTop="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_subtract2" />
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbarU"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="?attr/actionBarSize"
-                android:theme="?attr/actionBarTheme"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:navigationIcon="?attr/actionModeCloseDrawable" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Edit Profile"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorSecondaryText"
+                    android:fontFamily="@font/ubuntu_bold"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="50dp"/>
 
-        </RelativeLayout>
+            </RelativeLayout>
 
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/circle"
-            android:layout_marginTop="-190dp"
-            android:elevation="1dp"/>
+<!--        <ImageView-->
+<!--            android:layout_width="150dp"-->
+<!--            android:layout_height="150dp"-->
+<!--            android:layout_gravity="center_horizontal"-->
+<!--            android:src="@drawable/circle"-->
+<!--            android:layout_marginTop="-190dp"-->
+<!--            android:elevation="1dp"/>-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical"-->
+<!--            android:layout_marginTop="-90dp">-->
+
+<!--        <androidx.cardview.widget.CardView-->
+<!--            android:layout_width="280dp"-->
+<!--            android:layout_height="220dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:alpha="0.9"-->
+<!--            android:backgroundTint="@color/colorOnPrimary"-->
+<!--            app:cardBackgroundColor="@color/colorSecondaryText"-->
+<!--            app:cardElevation="5dp">-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/displayName"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:fontFamily="@font/poppins_bold"-->
+<!--                android:text="Name"-->
+<!--                android:textAlignment="center"-->
+<!--                android:textSize="24sp" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/displayUsername"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:fontFamily="@font/poppins_regular"-->
+<!--                android:text="Email"-->
+<!--                android:textAlignment="center"-->
+<!--                android:layout_marginTop="40dp"-->
+<!--                android:textSize="18sp" />-->
+
+<!--        </androidx.cardview.widget.CardView>-->
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="-90dp">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="280dp"
-            android:layout_height="220dp"
             android:layout_gravity="center"
-            android:alpha="0.9"
-            android:backgroundTint="@color/colorOnPrimary"
-            app:cardBackgroundColor="@color/colorSecondaryText"
-            app:cardElevation="5dp">
+            android:background="@color/colorSecondaryText"
+            android:orientation="vertical"
+            android:layout_marginTop="-150dp">
 
-            <TextView
-                android:id="@+id/displayName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/poppins_bold"
-                android:text="Name"
-                android:textAlignment="center"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/displayUsername"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/poppins_regular"
-                android:text="Email"
-                android:textAlignment="center"
-                android:layout_marginTop="40dp"
-                android:textSize="18sp" />
-
-        </androidx.cardview.widget.CardView>
-
-            <LinearLayout
+            <com.google.android.material.card.MaterialCardView
+                app:theme="@style/Theme.MaterialComponents"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="25dp">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:cardBackgroundColor="@color/colorSecondaryText"
+                android:layout_margin="8dp"
+                android:padding="10dp"
+                app:cardElevation="0dp"
+                app:cardPreventCornerOverlap="true">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_medium"
-                    android:text="Email"
-                    android:textSize="18sp"/>
-                <EditText
-                    android:id="@+id/email"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_regular"
-                    android:hint="Email"
-                    android:inputType="text"
-                    android:textColor="@color/colorDivider"
-                    android:textColorHint="@color/colorDivider"
-                    android:textSize="14sp" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="25dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_medium"
-                    android:text="Full Names"
-                    android:textSize="18sp"/>
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:background="@drawable/circle"
+                        android:backgroundTint="@color/colorSecondaryText"
+                        android:src="@drawable/ic_outline_camera"
+                        android:layout_gravity="center"/>
 
-                <EditText
-                    android:id="@+id/fullnames"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_regular"
-                    android:hint="Fullnames"
-                    android:inputType="text"
-                    android:textColor="@color/colorDivider"
-                    android:textColorHint="@color/colorDivider"
-                    android:textSize="14sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Upload a Profile Photo"
+                        android:textColor="@color/colorPrimaryText"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/ubuntu_bold"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_medium"
-                    android:text="Username"
-                    android:textSize="18sp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="Email"
+                        android:textSize="18sp"/>
+                    <EditText
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_regular"
+                        android:hint="Email"
+                        android:inputType="text"
+                        android:textColor="@color/colorPrimaryText"
+                        android:textColorHint="@color/colorDivider"
+                        android:textSize="14sp" />
 
-                <EditText
-                    android:id="@+id/username"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_regular"
-                    android:hint="Username"
-                    android:inputType="text"
-                    android:textColor="@color/colorDivider"
-                    android:textColorHint="@color/colorDivider"
-                    android:textSize="14sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="Full Names"
+                        android:textSize="18sp"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_medium"
-                    android:text="Password"
-                    android:textSize="18sp"/>
+                    <EditText
+                        android:id="@+id/fullnames"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_regular"
+                        android:hint="Fullnames"
+                        android:inputType="text"
+                        android:textColor="@color/colorDivider"
+                        android:textColorHint="@color/colorDivider"
+                        android:textSize="14sp" />
 
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:fontFamily="@font/poppins_regular"
-                    android:hint="Password"
-                    android:inputType="numberPassword"
-                    android:textColor="@color/colorDivider"
-                    android:textColorHint="@color/colorDivider"
-                    android:textSize="14sp"
-                    app:passwordToggleEnabled="true" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="Username"
+                        android:textSize="18sp"/>
 
-                <Button
-                    android:id="@+id/update"
-                    android:layout_width="180dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:text="Update"
-                    android:textColor="@color/colorSecondaryText"
-                    app:backgroundTint="@color/colorPrimaryDark"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/password" />
+                    <EditText
+                        android:id="@+id/username"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_regular"
+                        android:hint="Username"
+                        android:inputType="text"
+                        android:textColor="@color/colorDivider"
+                        android:textColorHint="@color/colorDivider"
+                        android:textSize="14sp" />
 
-                <Button
-                    android:id="@+id/logout"
-                    android:layout_width="180dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:text="Log Out"
-                    android:textColor="@color/colorSecondaryText"
-                    app:backgroundTint="@color/colorPrimaryDark"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/update" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="Password"
+                        android:textSize="18sp"/>
 
-            </LinearLayout>
+                    <EditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:fontFamily="@font/poppins_regular"
+                        android:hint="Password"
+                        android:inputType="numberPassword"
+                        android:textColor="@color/colorDivider"
+                        android:textColorHint="@color/colorDivider"
+                        android:textSize="14sp"
+                        app:passwordToggleEnabled="true" />
+
+                    <Button
+                        android:id="@+id/update"
+                        android:layout_width="180dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text="Update"
+                        android:textColor="@color/colorSecondaryText"
+                        app:backgroundTint="@color/colorPrimaryDark" />
+
+
+                </LinearLayout>
+
+            </com.google.android.material.card.MaterialCardView>
 
         </LinearLayout>
 
-        </LinearLayout>
+    </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
