--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -15,7 +15,7 @@
         android:text="Name:"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/black"/>
+        android:textColor="@color/colorPrimaryText"/>
 
     <EditText
         android:id="@+id/eventNameET"
@@ -35,7 +35,7 @@
         android:text="Date"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/black"/>
+        android:textColor="@color/colorPrimaryText"/>
 
     <TextView
         android:id="@+id/eventTimeTV"
@@ -46,14 +46,14 @@
         android:text="Time"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/black"/>
+        android:textColor="@color/colorPrimaryText"/>
 
     <Button
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
-        android:textColor="@color/blue"
+        android:textColor="@color/colorSecondaryText"
         android:background="@null"
         android:textStyle="bold"
         android:onClick="saveEventAction"
