--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Weekly"
-        android:textColor="@color/blue"
+        android:textColor="@color/colorSecondaryText"
         android:background="@null"
         android:textStyle="bold"
         android:onClick="weeklyAction"
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/back"
-            android:textColor="@color/blue"
+            android:textColor="@color/colorSecondaryText"
             android:background="@null"
             android:textStyle="bold"
             android:onClick="previousMonthAction"
@@ -46,14 +46,14 @@
             android:text="Feb 2021"
             android:textSize="20sp"
             android:textAlignment="center"
-            android:textColor="@color/black"/>
+            android:textColor="@color/colorPrimaryText"/>
 
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/forward"
-            android:textColor="@color/blue"
+            android:textColor="@color/colorSecondaryText"
             android:background="@null"
             android:textStyle="bold"
             android:onClick="nextMonthAction"
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="SUN"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="MON"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TUE"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -98,7 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="WED"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -107,7 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="THUR"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -116,7 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="FRI"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -125,7 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="SAT"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
