--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/back"
-            android:textColor="@color/blue"
+            android:textColor="@color/colorSecondaryText"
             android:background="@null"
             android:textStyle="bold"
             android:onClick="previousWeekAction"
@@ -34,14 +34,14 @@
             android:text="Feb 2021"
             android:textSize="20sp"
             android:textAlignment="center"
-            android:textColor="@color/black"/>
+            android:textColor="@color/colorPrimaryText"/>
 
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/forward"
-            android:textColor="@color/blue"
+            android:textColor="@color/colorSecondaryText"
             android:background="@null"
             android:textStyle="bold"
             android:onClick="nextWeekAction"
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="SUN"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="MON"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TUE"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="WED"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -95,7 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="THUR"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -104,7 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="FRI"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -113,7 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="SAT"
-            android:textColor="@color/gray"
+            android:textColor="@color/colorButtons"
             android:textAlignment="center"
             android:textSize="16sp"/>
 
@@ -131,7 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Task"
-        android:textColor="@color/blue"
+        android:textColor="@color/colorSecondaryText"
         android:background="@null"
         android:textStyle="bold"
         android:onClick="newEventAction"
