--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,29 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/home"
+        android:id="@+id/homeM"
         android:title="Home"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_home"/>
 
     <item
-        android:id="@+id/tasks"
+        android:id="@+id/tasksM"
         android:title="Tasks"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_task"/>
 
     <item
-        android:id="@+id/holder"
+        android:id="@+id/holderM"
         android:title="" />
 
     <item
-        android:id="@+id/page"
+        android:id="@+id/pageM"
         android:title="Page"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_page"/>
 
     <item
-        android:id="@+id/profile"
+        android:id="@+id/profileM"
         android:title="Profile"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_account"/>
