--- a/app/src/main/res/layout/event_cell.xml
+++ b/app/src/main/res/layout/event_cell.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="20dp"
         android:id="@+id/eventCellTV"
         android:textSize="20sp"
-        android:textColor="@color/colorPrimaryText"
+        android:textColor="#000"
         android:text="Task"/>
 
 </LinearLayout>
