--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="android:Theme.Material.Light">
-        <item name="android:colorPrimaryDark">@color/primary_01</item>
-        <item name="android:colorPrimary">@color/action_bar_01</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:editTextStyle">@style/EditTextStyle</item>
-        <item name="android:actionModeBackground">@color/action_bar_01</item>
-        <item name="android:windowBackground">@color/background_app</item>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="EditTextStyle" parent="@android:style/Widget.EditText">
